Support custom URL schemes (#384)